# multi-clipboard

./: .clang-tidy  .travis.yml  CMakeLists.txt  README.md  argparse.hpp  lib.cpp  lib.hpp  main.cpp
cmake/: CheckGetRepos.cmake
src/: CMakeLists.txt  argparse.cpp  hppuiohook.hpp  lib.cpp  lib.hpp  main.cpp  test.cpp
